force-app/main/default/objects/CTRRequestFormHeader__c.object
<CustomObject>
    <fields>
        <fullName>InterestedProductTypeAsSupplierTOP__c</fullName>
        <label>Interested Product Type As Supplier TOP</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InterestedProductTypeasSupplierTOP</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedProductTypeAsSupplierTX__c</fullName>
        <label>Interested Product Type as Supplier TX</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>InterestedProductTypeasSupplierTX</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedProductTypeCustomer__c</fullName>
        <label>Interested Product Type Customer</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petroleum Products</fullName>
                </value>
                <value>
                    <fullName>Petrochemical Products</fullName>
                </value>
                <value>
                    <fullName>Lube Base Products</fullName>
                </value>
                <value>
                    <fullName>Crude</fullName>
                </value>
                <value>
                    <fullName>LABIX Products</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestedProductTypeSupplier__c</fullName>
        <label>Interested Product Type Supplier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crude</fullName>
                </value>
                <value>
                    <fullName>B100/Ethanal</fullName>
                </value>
                <value>
                    <fullName>Petroleum and Components</fullName>
                </value>
                <value>
                    <fullName>Long Residue</fullName>
                </value>
                <value>
                    <fullName>Normal Paraffin</fullName>
                </value>
                <value>
                    <fullName>Petroleum Products</fullName>
                </value>
                <value>
                    <fullName>Petrochemical Products</fullName>
                </value>
                <value>
                    <fullName>Lube Base Products</fullName>
                </value>
                <value>
                    <fullName>LABIX Products</fullName>
                </value>
                <value>
                    <fullName>Hydrocarbon Solvent</fullName>
                </value>
                <value>
                    <fullName>Chemical Solvent</fullName>
                </value>
                <value>
                    <fullName>Other Chemicals</fullName>
                </value>
                <value>
                    <fullName>Aromatic</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>LAB</fullName>
                </value>
                <value>
                    <fullName>Lube</fullName>
                </value>
                <value>
                    <fullName>Olefin</fullName>
                </value>
                <value>
                    <fullName>Solvents &amp; Chemical</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalEditField__c</fullName>
        <label>Internal Edit Field</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalOriginalField__c</fullName>
        <label>Internal Original Field</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LABIXProduct__c</fullName>
        <label>LABIX Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LanguageForIntegrationM41</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Name</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>CTR Request Form Header</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadOwner__c</fullName>
        <formula>Customer__r.LeadOwner__r.FirstName + &quot; &quot; +  Customer__r.LeadOwner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntityOthers__c</fullName>
        <label>Other Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <label>Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Limited Company</fullName>
                </value>
                <value>
                    <fullName>Subsidiary Company Of Public Limited Company</fullName>
                </value>
                <value>
                    <fullName>Private Limited Company</fullName>
                </value>
                <value>
                    <fullName>Other (Please specify)</fullName>
                </value>
                <value>
                    <fullName>Private Individual Or Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liable1Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liable 1 (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lible2Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lible 2 (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LocationInGoogleMapsGeolocation__c</fullName>
        <label>Location in Google Maps (Geolocation)</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LocationInGoogleMapsLinks__c</fullName>
        <label>Location in Google Maps (Link)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LubeBaseProduct__c</fullName>
        <label>Lube Base Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingBuildingCode__c</fullName>
        <label>Building Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCityDoNotUse__c</fullName>
        <label>City (Do not use)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Master_Map__c.Type__c</field>
                <operation>equals</operation>
                <value>Province</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>CTR Request Form Header (City)</relationshipLabel>
        <relationshipName>CTR_Request_Form_Header7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MailingCoName__c</fullName>
        <label>C/O Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingDistrict__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingFloor__c</fullName>
        <label>Floor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingHousenoLocal__c</fullName>
        <label>House no. (Local)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingRoom__c</fullName>
        <label>Room</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingSubDistrict__c</fullName>
        <label>Sub District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainProduct__c</fullName>
        <label>Main Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainService__c</fullName>
        <label>Main Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxPartialDeliveries__c</fullName>
        <label>Max Partial Deliveries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileCountryCode__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCodePhone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfRegistrationMinistryEnergy__c</fullName>
        <label>No Of Registration (Ministry Energy)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ORBasedInvVerif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OR-Based Inv. Verif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OccupationalHealthAndSafetyPolicy__c</fullName>
        <label>Occupational Health and Safety policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrdercurrencyDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order currency(Data not Correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ordercurrency__c</fullName>
        <label>Order currency*</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADP: Andoran peseta</fullName>
                </value>
                <value>
                    <fullName>AED: United Arab Emirates Dirham</fullName>
                </value>
                <value>
                    <fullName>AFA: Afghani (Old)</fullName>
                </value>
                <value>
                    <fullName>AFN: Afghani</fullName>
                </value>
                <value>
                    <fullName>ALL: Albanian Lek</fullName>
                </value>
                <value>
                    <fullName>AMD: Armenian Dram</fullName>
                </value>
                <value>
                    <fullName>ANG: West Indian Guilder</fullName>
                </value>
                <value>
                    <fullName>AOA: Angolanische Kwanza</fullName>
                </value>
                <value>
                    <fullName>AON: Angolan New Kwanza (Old)</fullName>
                </value>
                <value>
                    <fullName>AOR: Angolan Kwanza Reajustado (Old)</fullName>
                </value>
                <value>
                    <fullName>ARS: Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>ATS: Austrian Schilling</fullName>
                </value>
                <value>
                    <fullName>AUD: Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>AWG: Aruban Guilder</fullName>
                </value>
                <value>
                    <fullName>AZM: Azerbaijan Manat</fullName>
                </value>
                <value>
                    <fullName>BAM: Bosnia and Herzegovina Convertible Mark</fullName>
                </value>
                <value>
                    <fullName>BBD: Barbados Dollar</fullName>
                </value>
                <value>
                    <fullName>BDT: Bangladesh Taka</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OriginalRequestFormHeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Header</label>
        <referenceTo>CTRRequestFormHeader__c</referenceTo>
        <relationshipLabel>CTR Request Form Header</relationshipLabel>
        <relationshipName>CTRRequestFormHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginalShareholder__c</fullName>
        <label>Original Shareholder</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherMainProduct__c</fullName>
        <label>Other Main Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherMainService__c</fullName>
        <label>Other Main Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverDeliveries__c</fullName>
        <label>Over Deliveries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverdeliveryTolerance__c</fullName>
        <label>Overdelivery Tolerance</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartialDeliveriesperitem__c</fullName>
        <label>Partial Deliveries per item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PartialDeliveriesperitem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR Request Form Header (Partner)</relationshipLabel>
        <relationshipName>CTRRequestFormHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentGuaranteeProcedure__c</fullName>
        <label>Payment Guarantee Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZA02 Low Risk (Parent Guarantee)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentHistoryRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment History Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentOverTheAmountOfUSD__c</fullName>
        <description>Has the company ever had any default payment over the amount of USD 50,000 in the last 3 years?</description>
        <label>Payment over the amount of USD 50,000</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentTerm__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z000 Cash on Delivery</fullName>
                </value>
                <value>
                    <fullName>Z001 Pay Immediately due net</fullName>
                </value>
                <value>
                    <fullName>Z002 Payment in Advance</fullName>
                </value>
                <value>
                    <fullName>Z003 Payment on Delivery</fullName>
                </value>
                <value>
                    <fullName>Z004 Payment under L/C at sight</fullName>
                </value>
                <value>
                    <fullName>Z005 Payment as LC at sight or TT at sight</fullName>
                </value>
                <value>
                    <fullName>Z006 Payment within 2 weeks from receipt of the invoice</fullName>
                </value>
                <value>
                    <fullName>Z007 Pay at the end of each month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PetroleumAndComponentsProducts__c</fullName>
        <label>Petroleum and Components Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneCountryCode__c</fullName>
        <label>Phone Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountryCodePhone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhoneExtension__c</fullName>
        <label>Phone Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCodeLocalText__c</fullName>
        <label>PostalCodeLocalText</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchasingOrganization__c</fullName>
        <label>Purchasing Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PurchasingOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonOfTheDefault__c</fullName>
        <description>payment over the amount of USD 50,000 in the last 3 years
If Yes (Please specify the reason of the default)</description>
        <label>Reason of the default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonOfViolatingantimoneylaw__c</fullName>
        <label>Reason of Violating anti-money law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReconAccountDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recon. Account(Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReconAccount__c</fullName>
        <label>Recon. Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1020000</fullName>
                    <label>1020000  Trade Account Receivable - Others</label>
                </value>
                <value>
                    <fullName>1020010  Trade Account Receivable - Others Allwdoubtfuldebt</fullName>
                </value>
                <value>
                    <fullName>1020100  Trade Account Receivable - Group Consolidation</fullName>
                </value>
                <value>
                    <fullName>1020110  Trade Account Receivable-GrpConsol AllowaDoubtDebt</fullName>
                </value>
                <value>
                    <fullName>1020200  Trade Account Receivable - Related</fullName>
                </value>
                <value>
                    <fullName>1020210  Trade Account Receivable-Related AllowDoubtfulDebt</fullName>
                </value>
                <value>
                    <fullName>1040000  Other Account Receivable - Others</fullName>
                </value>
                <value>
                    <fullName>1040010 Other Account Receivable-Other AllowaceDoubtfulDbt</fullName>
                </value>
                <value>
                    <fullName>1040100  Other Account Receivable - Group Consolidation</fullName>
                </value>
                <value>
                    <fullName>1040110  Other Account Receivable-GrpCons AllowDoubtfulDebt</fullName>
                </value>
                <value>
                    <fullName>1040200  Other Account Receivable - Related</fullName>
                </value>
                <value>
                    <fullName>1040210  Other Account Receivable-Relate-Allow. Doubt.Debt</fullName>
                </value>
                <value>
                    <fullName>2040090  Other Account Payable - Advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recty1Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec.ty 1 (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recty1__c</fullName>
        <label>Rec ty 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recty2Datanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rec.ty 2 (Data not correct)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recty2__c</fullName>
        <label>Rec.ty 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferalBy__c</fullName>
        <label>Referal By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionSAP__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegistrationStep__c</fullName>
        <label>Registration Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedInformation__c</fullName>
        <label>Related Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoomLocal__c</fullName>
        <label>Room (Local)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPCustomerGeneralSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAPCustomerGeneralSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAPSupplierGeneralSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAPSupplierGeneralSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesDistrict__c</fullName>
        <label>Sales District</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Disctrict</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesGroup__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TE2 Itti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOffice__c</fullName>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSV - TSV Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                    <label>2000 - TXTH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SameAddressasSoldTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Address as Sold-To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SameRegisteredAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Registered Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingCondition__c</fullName>
        <label>Shipping Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SocialResponsibilityPolicy__c</fullName>
        <label>Social Responsibility policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortKeyDatanotcorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sort Key Data not correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortKey__c</fullName>
        <label>Sort Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>009</fullName>
                    <label>009 External Doc. Number</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecifyFailedSupplyInLast3Years__c</fullName>
        <label>Specify Failed supply in last 3 years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyIssuesDuringThePast5Years__c</fullName>
        <label>Specify Issues during the Past 5 Years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecifyLanguagesOfCompanyName__c</fullName>
        <label>Specify Languages of Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SpecifyLanguagesofCompanyName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecifySanctionedTarget__c</fullName>
        <label>Specify Sanctioned Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTradingDate__c</fullName>
        <label>Start Trading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street2EN__c</fullName>
        <label>Street2EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2Local__c</fullName>
        <label>Street2Local</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3EN__c</fullName>
        <label>Street3EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street3Local__c</fullName>
        <label>Street3Local</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street4EN__c</fullName>
        <label>Street4EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street4Local__c</fullName>
        <label>Street4Local</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDistrictLocalText__c</fullName>
        <label>Sub District (Local)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubIndustry__c</fullName>
        <label>Sub-Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI001 - ABS</fullName>
                </value>
                <value>
                    <fullName>SI002 - Adhesive</fullName>
                </value>
                <value>
                    <fullName>SI003 - Agrochemical</fullName>
                </value>
                <value>
                    <fullName>SI004 - Animal feed</fullName>
                </value>
                <value>
                    <fullName>SI005 – Asphalt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SupplierOtherProducts__c</fullName>
        <label>Other Products (Supplier)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierProductIdentification__c</fullName>
        <label>Supplier Product Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierSearchTermEN__c</fullName>
        <label>Supplier Search Term (EN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>